Card 12 pronto para validação v2.